--- a/packages/rest/package.json
+++ b/packages/rest/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@loopback/context": "^0.11.2",
     "@loopback/core": "^0.8.4",
+    "@loopback/http-server": "^0.0.0",
     "@loopback/openapi-v3": "^0.10.4",
     "@loopback/openapi-v3-types": "^0.7.4",
     "@types/cors": "^2.8.3",
